// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelNamePanel/> spec renders errors 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding: 0px 0px;"
  >
    <div
      class="euiFlexItem"
    >
      <h3
        class="euiTitle euiTitle--small"
      >
        Name and description
      </h3>
    </div>
  </div>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
  />
  <div
    style="padding: initial;"
  >
    <div
      class="euiFormRow"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="true"
          class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
          for="random_html_id"
        >
          Name
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="random_html_id-error-0"
              class="euiFieldText"
              data-test-subj="create-channel-name-input"
              id="random_html_id"
              placeholder="Enter channel name"
              type="text"
              value="test"
            />
          </div>
        </div>
        <div
          aria-live="polite"
          class="euiFormErrorText euiFormRow__text"
          id="random_html_id-error-0"
        >
          test error
        </div>
      </div>
    </div>
    <div
      class="euiFormRow"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          <span>
            Description - 
            <i
              style="font-weight: normal;"
            >
              optional
            </i>
          </span>
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <textarea
          class="euiTextArea euiTextArea--resizeVertical"
          data-test-subj="create-channel-description-input"
          placeholder="What is the purpose of this channel?"
          rows="6"
          style="height: 4.1rem;"
        >
          test description
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChannelNamePanel/> spec renders the component 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding: 0px 0px;"
  >
    <div
      class="euiFlexItem"
    >
      <h3
        class="euiTitle euiTitle--small"
      >
        Name and description
      </h3>
    </div>
  </div>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
  />
  <div
    style="padding: initial;"
  >
    <div
      class="euiFormRow"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Name
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldText"
              data-test-subj="create-channel-name-input"
              id="random_html_id"
              placeholder="Enter channel name"
              type="text"
              value="test"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFormRow"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          <span>
            Description - 
            <i
              style="font-weight: normal;"
            >
              optional
            </i>
          </span>
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <textarea
          class="euiTextArea euiTextArea--resizeVertical"
          data-test-subj="create-channel-description-input"
          placeholder="What is the purpose of this channel?"
          rows="6"
          style="height: 4.1rem;"
        >
          test description
        </textarea>
      </div>
    </div>
  </div>
</div>
`;
